# scint

./: .gitignore  CMakeLists.txt  fit.cpp  main.cpp
